added local pic statically

--- a/public/index.html
+++ b/public/index.html
@@ -601,9 +601,7 @@ Webcam management = selects which camera to Sync
       Webcam Previews
     </div><br>
     <div class="inner" style="display: flex;flex-wrap:wrap">
-      <img style=" display: block;margin-left: auto;margin-right: auto; margin-bottom:20px" src="https://ichef.bbci.co.uk/images/ic/640x360/p06gsqm7.jpg" alt="">
-      <img style=" display: block;margin-left: auto;margin-right: auto; margin-bottom:20px" src="https://ichef.bbci.co.uk/images/ic/640x360/p06gsqm7.jpg" alt="">
-      <img style=" display: block;margin-left: auto;margin-right: auto; margin-bottom:20px" src="https://ichef.bbci.co.uk/images/ic/640x360/p06gsqm7.jpg" alt="">
+      <img style=" display: block;margin-left: auto;margin-right: auto; margin-bottom:20px" src="http://192.168.214.3/jpg/image.jpg" alt="">
     </div>
   </fieldset>
 
