--- a/public/index.html
+++ b/public/index.html
@@ -179,7 +179,7 @@ Webcam management = selects which camera to Sync
           }
           $(".clickablemail").click(function(e) {
             e.preventDefault();
-            $.get("getFailedMail?mailname="+e.target.innerHTML, function(retFailedMail) {
+            $.get("getFailedMail?mailname=" + e.target.innerHTML, function(retFailedMail) {
               //$(".failedmailcontent").html("<span>hello</span>")
               $(".failedmailcontent").html(retFailedMail.textAsHtml)
               console.log(retFailedMail)
@@ -680,7 +680,7 @@ Webcam management = selects which camera to Sync
     <a href="#mailscanner">mail</a>
     <a href="#gatewayfs">gateways</a>
   </div>
-  <fieldset id="gatewayfs" class="gatewayfs">
+  <fieldset id="gatewayfs" class="gatewayfs" hidden>
     <div class="fstitle">
       Gateway <span id="gwloader"> - loading</span>
     </div><br>
@@ -741,7 +741,7 @@ Webcam management = selects which camera to Sync
       <img id="webcam2" style="width:50%; display: block;margin-left: auto;margin-right: auto; margin-bottom:20px" src="" alt="">
     </div>
   </fieldset>
-  <fieldset id="legacy" class="fiddy">
+  <fieldset id="legacy" class="fiddy" style="margin-top:58px">
     <div class="fstitle">
       Legacy CnC Functions
     </div><br>
@@ -758,20 +758,31 @@ Webcam management = selects which camera to Sync
     <div class="fstitle">
       Mail
     </div><br>
-    <table style="margin-top:30px;width:580px;float:left">
-      <tr>
-        <thead>
-          <th style="width:100px">date</th>
-          <th style="width:50px">size</th>
-          <th>name</th>
-        </thead>
+    <div style="display:inline-flex">
+      <table style="margin-top:30px;float:left">
+        <tr>
+          <thead>
+            <th style="width:100px">date</th>
+            <th style="width:50px">size</th>
+            <th>name</th>
+          </thead>
+        </tr>
         <tbody id="entries">
 
         </tbody>
-      </tr>
-    </table>
-    <div class="failedmailcontent" style="float:left">
+      </table>
+      <table class="failedmailcontent" style="margin-top:30px;float:left;border-left: double;">
+        <tr>
+          <thead>
+            <th style="width:100px">date</th>
+            <th style="width:50px">size</th>
+            <th>name</th>
+          </thead>
+        </tr>
+        <tbody id="failedmailcontent">
 
+        </tbody>
+      </table>
     </div>
   </fieldset>
 
