--- a/public/index.html
+++ b/public/index.html
@@ -29,8 +29,9 @@ Webcam management = selects which camera to Sync
       width: 1px;
       white-space: nowrap;
     }
-    .inner button{
-      width:200px;
+
+    .inner button {
+      width: 200px;
     }
   </style>
 
@@ -40,14 +41,13 @@ Webcam management = selects which camera to Sync
     let networks
     let gateways
     let target
-    let settings = []
 
     jQuery(document).ready(function() {
-      //refreshPings()
+      refreshPings()
       refreshSyncs()
-      //getCams()
-      getFailedMail()
+      getCams()
       getQueuedMail()
+      getFailedMail()
       $(".manualsync").click(function(e) {
         e.preventDefault();
         console.log("clicked")
@@ -200,20 +200,22 @@ Webcam management = selects which camera to Sync
         }
       })
     }
+
     function getQueuedMail() {
       $.get("getQueued", function(getQueued) {
         if (getQueued.includes("Error")) {
           setTimeout(function() {
-            getFailedMail()
+            getQueuedMail()
           }, 1000)
         } else {
           let lines = getQueued.split('\n');
           for (var ent = 1; ent < lines.length; ent++) {
-            $("#queuedentries").append("<tr><td>" + lines[ent].split(',')[1] + "</td><td>" + lines[ent].split(',')[2] + "</td><td><span value=" + lines[ent].split(',')[0] + " class='clickablemail'>" + lines[ent].split(',')[0] + "</span></td></tr>")
+            $("#queuedentries").append("<tr><td>" + lines[ent].split(',')[1] + "</td><td>" + lines[ent].split(',')[2] + "</td><td><span value=" + lines[ent].split(',')[0] + " class='clickablemail'>" + lines[ent].split(',')[0] +
+              "</span></td></tr>")
           }
           $(".clickablemail").click(function(e) {
             e.preventDefault();
-            $.get("getQueueddMail?mailname="+e.target.innerHTML, function(retQueuedMail) {
+            $.get("getQueueddMail?mailname=" + e.target.innerHTML, function(retQueuedMail) {
               //$(".failedmailcontent").html("<span>hello</span>")
               $(".queuedmailcontent").html(retQueuedMail.textAsHtml)
               console.log(retFailedMail)
@@ -223,6 +225,7 @@ Webcam management = selects which camera to Sync
         }
       })
     }
+
     function refreshSyncs() {
       $.get("getSyncs", function(getSyncs) {
         if (getSyncs.includes("Error")) {
@@ -264,30 +267,7 @@ Webcam management = selects which camera to Sync
       $.get("/set?network=" + network + "&gateway=" + gateway);
       drawLine(network)
     }
-    mapRouteToFirewall()
-    function mapRouteToFirewall(){
-      $.get("/getfirewallpolicy", function(fwdata) {
-        console.log("gotfw for mapping "+ fwdata)
-        if (typeof fwdata == "object") {
-          $.get("/getrouterpolicy", function(rdata) {
-            console.log("gotrouting for mapping")
-            for(var j = 0 ; j < networks.length ; j++ ){
-              console.log("mapping "+networks[j])
-              for(fwnr in fwdata){
-                if(fwdata[fwnr].name.includes(networks[j])){
-                  settings[fwdata[fwnr].name+"--fw"]=fwdata[fwnr].nr
-                }
-              }
-              for(rnr in rdata){
-                if(rdata[rnr].comments.includes(networks[j])){
-                  settings[rdata[rnr].comments+"--rp"]=rdata[rnr].nr
-                }
-              }
-            }
-          })
-        }
-      })
-    }
+
     function getNetworks() {
       //get firewallpolicy
       $.get("/getfirewallpolicy", function(currentfirewalldata) {
@@ -297,7 +277,7 @@ Webcam management = selects which camera to Sync
             for (var i = 0; i < networkdata.QNET.networks.length; i++) {
               for (var cur in currentfirewalldata) {
                 if (networkdata.QNET.networks[i].firewallpolicy == cur) {
-                  console.log("network firewallpolicy id for QNET " + networkdata.QNET.networks[i].firewallpolicy + " == "+ cur + " with status "+ currentfirewalldata[cur].status)
+                  //console.log("network firewallpolicy id for QNET " + networkdata.QNET.networks[i].firewallpolicy + " == "+ cur + " with status "+ currentfirewalldata[cur].status)
                   if (currentfirewalldata[cur].status == undefined) {
                     $(".QNET").attr("gateway", networkdata.QNET.networks[i].name)
                     drawLine("QNET")
@@ -816,7 +796,7 @@ Webcam management = selects which camera to Sync
       Mail
     </div><br>
     <div style="display:inline-flex">
-      <table style="margin-top:30px;float:left">
+      <table style="margin-top:30px;float:left;width:50%">
         <tr>
           <thead>
             <th style="width:100px">date</th>
@@ -828,33 +808,18 @@ Webcam management = selects which camera to Sync
 
         </tbody>
       </table>
-      <table class="failedmailcontent" style="margin-top:30px;float:left;border-left: double;">
+      <table style="margin-top:30px;width:580px;float:left;width:50%">
         <tr>
           <thead>
             <th style="width:100px">date</th>
             <th style="width:50px">size</th>
             <th>name</th>
           </thead>
+          <tbody id="queuedentries">
+
+          </tbody>
         </tr>
-        <tbody id="failedmailcontent">
-
-        </tbody>
       </table>
-    </div>
-    <table style="margin-top:30px;width:580px;float:left">
-      <tr>
-        <thead>
-          <th style="width:100px">date</th>
-          <th style="width:50px">size</th>
-          <th>name</th>
-        </thead>
-        <tbody id="queuedentries">
-
-        </tbody>
-      </tr>
-    </table>
-    <div class="queuedmailcontent" style="float:left">
-
     </div>
   </fieldset>
 
