--- a/public/index.html
+++ b/public/index.html
@@ -801,7 +801,7 @@ Webcam management = selects which camera to Sync
   </fieldset>
   <fieldset id="legacy" class="fiddy" style="margin-top:58px">
     <div class="fstitle">
-      Legacy CnC Functions
+      Sync Functions
     </div><br>
     <div class="inner" style="">
       <button style="flex: 1;" class="manualsync pure-button">Manual Sync</button><br>
