--- a/public/index.html
+++ b/public/index.html
@@ -48,7 +48,7 @@ Webcam management = selects which camera to Sync
       //getCams()
       getQueuedMail()
       getFailedMail()
-      getMem()
+      //getMem()
       $(".manualsync").click(function(e) {
         e.preventDefault();
         console.log("clicked")
