--- a/public/index.html
+++ b/public/index.html
@@ -819,6 +819,7 @@ Webcam management = selects which camera to Sync
     </div><br>
     <div style="display:inline-flex">
       <table style="margin-top:30px;float:left;width:50%">
+        <caption>Failed</caption>
         <tr>
           <thead>
             <th style="width:100px">date</th>
@@ -831,6 +832,7 @@ Webcam management = selects which camera to Sync
         </tbody>
       </table>
       <table style="margin-top:30px;width:580px;float:left;width:50%">
+        <caption>Queued</caption>
         <tr>
           <thead>
             <th style="width:100px">date</th>
